force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Subscription_Value__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Value__c</fullName>
    <description>field used to display subscription value minus support</description>
    <formula>TCV__c-Support_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscription Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>