force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Tiered_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Tiered_Pricing__c</fullName>
    <formula>SBQQ__Product__r.Tiered_Pricing__c</formula>
    <label>Tiered Pricing</label>
    <type>Checkbox</type>
</CustomField>