force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Total_OSA_List_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_OSA_List_Price__c</fullName>
    <formula>OSA_List_Price__c*SBQQ__Quantity__c*SBQQ__Quote__r.SBQQ__SubscriptionTerm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total OSA List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>