force-app/main/default/objects/SBQQ__QuoteLine__c/fields/zTest_Discount__c.field-meta.xml
<CustomField>
    <fullName>zTest_Discount__c</fullName>
    <formula>SBQQ__Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zTest Discount</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>