force-app/main/default/objects/SBQQ__QuoteLine__c/validationRules/Validation_On_Update_Of_Meter_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_On_Update_Of_Meter_Type</fullName>
    <active>false</active>
    <description>BIZ-45118:Contract ops should have the ability to update the Meter Type</description>
    <errorConditionFormula>AND(ISCHANGED(Per_Integrations__c),$Profile.Name &lt;&gt; &apos;Contracts / CRM Ops&apos;)</errorConditionFormula>
    <errorDisplayField>ACV_Type__c</errorDisplayField>
    <errorMessage>Meter Type cannot be changed. Please contact Contract Ops to update the Meter Type.</errorMessage>
</ValidationRule>